new straight shot for matched symbolic

--- a/gsm8k/downloaders/scratch.ipynb
+++ b/gsm8k/downloaders/scratch.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/sam/code/cohere/cohere-reasoning-v5/venv/lib/python3.12/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "from datasets import load_dataset\n",
@@ -13,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -22,7 +31,7 @@
        "'/home/sam/code/cohere/cohere-reasoning-v5/gsm8k/downloaders'"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -33,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -60,62 +69,118 @@
        "      <th>problem_id</th>\n",
        "      <th>problem</th>\n",
        "      <th>answer</th>\n",
-       "      <th>subject</th>\n",
-       "      <th>level</th>\n",
+       "      <th>solution_model</th>\n",
+       "      <th>solution_model_provider</th>\n",
+       "      <th>solution</th>\n",
+       "      <th>solution_verified</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>0</td>\n",
-       "      <td>Convert the point $(0,3)$ in rectangular coord...</td>\n",
-       "      <td>\\left( 3, \\frac{\\pi}{2} \\right)</td>\n",
-       "      <td>Precalculus</td>\n",
-       "      <td>2</td>\n",
+       "      <td>Toula went to the bakery and bought various ty...</td>\n",
+       "      <td>694</td>\n",
+       "      <td>command-r7b-12-2024</td>\n",
+       "      <td>Cohere</td>\n",
+       "      <td>To find the total cost of the pastries, we nee...</td>\n",
+       "      <td>True</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>1</td>\n",
-       "      <td>Define\\n\\[p = \\sum_{k = 1}^\\infty \\frac{1}{k^2...</td>\n",
-       "      <td>p - q</td>\n",
-       "      <td>Intermediate Algebra</td>\n",
-       "      <td>5</td>\n",
+       "      <td>I have 10 liters of orange drink that are two-...</td>\n",
+       "      <td>15</td>\n",
+       "      <td>command-r7b-12-2024</td>\n",
+       "      <td>Cohere</td>\n",
+       "      <td>To solve this problem, we need to determine th...</td>\n",
+       "      <td>True</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   problem_id                                            problem  \\\n",
-       "0           0  Convert the point $(0,3)$ in rectangular coord...   \n",
-       "1           1  Define\\n\\[p = \\sum_{k = 1}^\\infty \\frac{1}{k^2...   \n",
+       "   problem_id                                            problem  answer  \\\n",
+       "0           0  Toula went to the bakery and bought various ty...     694   \n",
+       "1           1  I have 10 liters of orange drink that are two-...      15   \n",
        "\n",
-       "                            answer               subject  level  \n",
-       "0  \\left( 3, \\frac{\\pi}{2} \\right)           Precalculus      2  \n",
-       "1                            p - q  Intermediate Algebra      5  "
+       "        solution_model solution_model_provider  \\\n",
+       "0  command-r7b-12-2024                  Cohere   \n",
+       "1  command-r7b-12-2024                  Cohere   \n",
+       "\n",
+       "                                            solution  solution_verified  \n",
+       "0  To find the total cost of the pastries, we nee...               True  \n",
+       "1  To solve this problem, we need to determine th...               True  "
       ]
      },
-     "execution_count": 22,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df = pd.read_csv(\"../datasets/original/math_limited.csv\")\n",
+    "df = pd.read_csv(\"../datasets/gsm8k_straight_shot_solutions.csv\")\n",
     "df.head(2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Number of records per solution model:\n",
+      "solution_model\n",
+      "command-r7b-12-2024                  100\n",
+      "google/gemma-2-27b-it                100\n",
+      "meta-llama/llama-3.3-70b-instruct    100\n",
+      "mistralai/mistral-nemo               100\n",
+      "qwen/qwen-2.5-72b-instruct           100\n",
+      "qwen/qwq-32b-preview                 100\n",
+      "Name: count, dtype: int64\n"
+     ]
+    }
+   ],
    "source": [
-    "df[\"problem_id\"] = range(len(df))\n",
-    "df = df.rename(columns={\"answer\": \"solution\"})\n",
-    "df = df[[\"problem_id\", \"problem\", \"solution\", \"subject\", \"level\"]]\n",
+    "# Count records per solution model\n",
+    "model_counts = df['solution_model'].value_counts()\n",
+    "print(\"\\nNumber of records per solution model:\")\n",
+    "print(model_counts)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Percentage of verified solutions per model:\n",
+      "solution_model\n",
+      "command-r7b-12-2024                  94.0%\n",
+      "google/gemma-2-27b-it                90.0%\n",
+      "meta-llama/llama-3.3-70b-instruct    96.0%\n",
+      "mistralai/mistral-nemo               89.0%\n",
+      "qwen/qwen-2.5-72b-instruct           95.0%\n",
+      "qwen/qwq-32b-preview                 94.0%\n",
+      "Name: solution_verified, dtype: object\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Calculate percentage of verified solutions per model\n",
+    "verification_rates = df.groupby('solution_model')['solution_verified'].mean() * 100\n",
     "\n",
-    "df.to_csv(...)"
+    "print(\"\\nPercentage of verified solutions per model:\")\n",
+    "print(verification_rates.round(2).astype(str) + '%')\n"
    ]
   }
  ],
