--- a/gsm8k/downloaders/scratch.ipynb
+++ b/gsm8k/downloaders/scratch.ipynb
@@ -349,56 +349,121 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Length of df: 1\n",
-      "Okay, let's see. So the problem is about Janet and her ducks. She gets eggs from them every day, uses some for breakfast and baking, and sells the rest. We need to find out how much money she makes daily from selling the eggs at the farmers' market.\n",
+      "Length of df: 500\n",
       "\n",
-      "First, let me break down the numbers. The ducks lay 16 eggs each day. That's the starting point. Then Janet uses some of them. She eats six for breakfast every morning. So XXXXX  three eggs for breakfast each day. Wait, the problem says three for breakfast every morning. So that's 3 eggs per day. Then she bakes muffins for her friends every day with four. So that's another 4 eggs used daily for muffins. \n",
-      "\n",
-      "So total eggs used per day would be 3 + 4 = 7 eggs. Then the remainder is sold. So subtract the used eggs from the total laid. 16 total eggs minus 7 used equals 9 eggs left to sell. Then she sells those 9 eggs at $2 per egg. So 9 eggs times $2 per egg would be 9 * 2 = $18. So she makes $18 each day.\n",
-      "\n",
-      "Wait, let me check again. Maybe I made a mistake in the subtraction. Let's go step by step. \n",
-      "\n",
-      "Total eggs per day: 16.\n",
-      "\n",
-      "Used for breakfast: 3.\n",
-      "\n",
-      "Used for muffins: 4.\n",
-      "\n",
-      "Total used: 3 + 4 = 7.\n",
-      "\n",
-      "Eggs remaining: 16 - 7 = 9.\n",
-      "\n",
-      "Yes, that's correct. Then selling 9 eggs at $2 each: 9 * 2 = $18. So the answer should be $18. Hmm, seems straightforward. But let me make sure there's no trick here. The problem says \"every day\" for all actions, so the numbers are consistent each day. So yes, the calculation holds. So the answer is $18.\n",
-      "Janet's ducks lay 16 eggs daily. She uses 3 eggs for breakfast and 4 for muffins, totaling 7 eggs consumed each day. Subtracting the used eggs from the total:  \n",
-      "**16 eggs - 7 eggs = 9 eggs remaining**.  \n",
-      "\n",
-      "She sells the remaining 9 eggs at $2 per egg:  \n",
-      "**9 eggs × $2/egg = $18**.  \n",
-      "\n",
-      "**Answer:** Janet makes **$18** daily at the farmers' market.\n"
+      "Percentage of verified solutions: 98.43%\n"
      ]
     }
    ],
    "source": [
     "import pandas as pd\n",
-    "df = pd.read_csv(\"../datasets/gsm8k_completions_on_policy.csv\")\n",
+    "# df = pd.read_csv(\"../datasets/gsm8k-experiment/gsm8k_completions_on_policy_r1.csv\")\n",
+    "# df = pd.read_csv(\"../datasets/gsm8k-experiment/gsm8k_completions_off_policy_r1.csv\")\n",
+    "# pd.read_csv(\"../datasets/gsm8k-experiment/gsm8k_straight_shot_solutions_r1.csv\")\n",
+    "# df = pd.read_csv(\"../datasets/gsm8k_straight_shot_solutions.csv\")\n",
+    "# df = pd.read_csv(\"../datasets/gsm8k_stubs_and_perturbations_on_policy.csv\")\n",
+    "# df = pd.read_csv(\"../datasets/gsm8k_stubs_and_perturbations_off_policy.csv\")\n",
+    "df = pd.read_csv(\"../datasets/gsm8k_completions_off_policy.csv\")\n",
+    "\n",
     "print(f\"Length of df: {len(df)}\")\n",
     "df.head(10)\n",
     "# df.iloc[1][\"perturbed_stub_lm\"]\n",
     "\n",
     "# Calculate percentage of verified solutions\n",
-    "# verified_percentage = (df['solution_verified'].sum() / len(df) * 100).round(2)\n",
-    "# print(f\"\\nPercentage of verified solutions: {verified_percentage}%\")\n",
+    "# verified_percentage = (df['solution_verified'].sum() / len(df) * 100).round(2)  # FOR SS\n",
+    "# # verified_percentage = (df['perturbed_stub_lm_solution_verified'].sum() / len(df) * 100).round(2) # FOR OTHERS\n",
+    "print(f\"\\nPercentage of verified solutions: {verified_percentage}%\")\n",
     "\n",
-    "print(f\"{df.iloc[0]['perturbed_stub_lm']} XXXXX {df.iloc[0]['perturbed_stub_lm_completion']}\")\n",
+    "# print(f\"{df.iloc[0]['perturbed_stub_lm']} XXXXX {df.iloc[5]['perturbed_stub_lm_completion']}\")\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>problem_id</th>\n",
+       "      <th>problem</th>\n",
+       "      <th>answer</th>\n",
+       "      <th>solution_model</th>\n",
+       "      <th>solution_model_provider</th>\n",
+       "      <th>solution</th>\n",
+       "      <th>solution_verified</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>Convert the point $(0,3)$ in rectangular coord...</td>\n",
+       "      <td>\\left( 3, \\frac{\\pi}{2} \\right)</td>\n",
+       "      <td>deepseek/deepseek-r1</td>\n",
+       "      <td>Together</td>\n",
+       "      <td>\\nOkay, so I need to convert the rectangular c...</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   problem_id                                            problem  \\\n",
+       "0           0  Convert the point $(0,3)$ in rectangular coord...   \n",
+       "\n",
+       "                            answer        solution_model  \\\n",
+       "0  \\left( 3, \\frac{\\pi}{2} \\right)  deepseek/deepseek-r1   \n",
+       "\n",
+       "  solution_model_provider                                           solution  \\\n",
+       "0                Together  \\nOkay, so I need to convert the rectangular c...   \n",
+       "\n",
+       "   solution_verified  \n",
+       "0               True  "
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = pd.read_csv(\"../datasets/gsm8k_straight_shot_solutions.csv\")\n",
+    "df.head(1)"
    ]
   }
  ],
