gsm symbolic done

--- a/gsm8k/downloaders/scratch.ipynb
+++ b/gsm8k/downloaders/scratch.ipynb
@@ -356,17 +356,238 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Length of df: 500\n",
-      "\n",
-      "Percentage of verified solutions: 98.43%\n"
+      "Length of df: 100\n"
      ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>problem_id</th>\n",
+       "      <th>problem</th>\n",
+       "      <th>answer</th>\n",
+       "      <th>stub_model</th>\n",
+       "      <th>stub_model_provider</th>\n",
+       "      <th>perturb_model</th>\n",
+       "      <th>perturb_model_provider</th>\n",
+       "      <th>stub</th>\n",
+       "      <th>perturbed_stub_lm</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>Rania saw a 210-foot whale with 7 72-inch remo...</td>\n",
+       "      <td>20</td>\n",
+       "      <td>deepseek/deepseek-r1</td>\n",
+       "      <td>Together</td>\n",
+       "      <td>meta-llama/llama-3.1-405b-instruct</td>\n",
+       "      <td>DeepInfra</td>\n",
+       "      <td>\\nOkay, let's see. Rania saw a 210-foot whale ...</td>\n",
+       "      <td>Okay, let's see. Rania saw a 240-foot whale wi...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>A fog bank rolls in from the ocean to cover a ...</td>\n",
+       "      <td>50</td>\n",
+       "      <td>deepseek/deepseek-r1</td>\n",
+       "      <td>Together</td>\n",
+       "      <td>meta-llama/llama-3.1-405b-instruct</td>\n",
+       "      <td>DeepInfra</td>\n",
+       "      <td>\\nOkay, let's see. The problem is about a fog ...</td>\n",
+       "      <td>Okay, let's see. The problem is about a fog ba...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>Luis is rolling a 4-sided die. How much more l...</td>\n",
+       "      <td>25</td>\n",
+       "      <td>deepseek/deepseek-r1</td>\n",
+       "      <td>Together</td>\n",
+       "      <td>meta-llama/llama-3.1-405b-instruct</td>\n",
+       "      <td>DeepInfra</td>\n",
+       "      <td>\\nOkay, let's see. Luis is rolling a 4-sided d...</td>\n",
+       "      <td>Okay, let's see. Luis is rolling a 4-sided die...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>A group of 190 students has various hobbies. 1...</td>\n",
+       "      <td>150</td>\n",
+       "      <td>deepseek/deepseek-r1</td>\n",
+       "      <td>Together</td>\n",
+       "      <td>meta-llama/llama-3.1-405b-instruct</td>\n",
+       "      <td>DeepInfra</td>\n",
+       "      <td>\\nOkay, let's see. So there's this problem abo...</td>\n",
+       "      <td>Okay, let's see. So there's this problem about...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>Zahra is popping popcorn for a snack. As the p...</td>\n",
+       "      <td>885</td>\n",
+       "      <td>deepseek/deepseek-r1</td>\n",
+       "      <td>Together</td>\n",
+       "      <td>meta-llama/llama-3.1-405b-instruct</td>\n",
+       "      <td>DeepInfra</td>\n",
+       "      <td>\\nOkay, let's try to figure out how many popco...</td>\n",
+       "      <td>Okay, let's try to figure out how many popcorn...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>5</td>\n",
+       "      <td>Sofia makes coffee using teaspoons of sugar an...</td>\n",
+       "      <td>1067</td>\n",
+       "      <td>deepseek/deepseek-r1</td>\n",
+       "      <td>Together</td>\n",
+       "      <td>meta-llama/llama-3.1-405b-instruct</td>\n",
+       "      <td>DeepInfra</td>\n",
+       "      <td>\\nOkay, let's see. Sofia uses sugar and water ...</td>\n",
+       "      <td>Okay, let's see. Sofia uses sugar and water in...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>6</td>\n",
+       "      <td>Pavel has 30 square yards of orange field. The...</td>\n",
+       "      <td>2820</td>\n",
+       "      <td>deepseek/deepseek-r1</td>\n",
+       "      <td>Together</td>\n",
+       "      <td>meta-llama/llama-3.1-405b-instruct</td>\n",
+       "      <td>DeepInfra</td>\n",
+       "      <td>\\nOkay, let's see. So Pavel has this orange fi...</td>\n",
+       "      <td>Okay, let's see. So Pavel has this orange fiel...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>7</td>\n",
+       "      <td>A farmer is buying feed for his alpacas. He bu...</td>\n",
+       "      <td>9</td>\n",
+       "      <td>deepseek/deepseek-r1</td>\n",
+       "      <td>Together</td>\n",
+       "      <td>meta-llama/llama-3.1-405b-instruct</td>\n",
+       "      <td>DeepInfra</td>\n",
+       "      <td>\\nOkay, let's see. The farmer needs to transpo...</td>\n",
+       "      <td>Okay, let's see. The farmer needs to transport...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>8</td>\n",
+       "      <td>A juggler can juggle 640 balls. An eighth of t...</td>\n",
+       "      <td>8</td>\n",
+       "      <td>deepseek/deepseek-r1</td>\n",
+       "      <td>Together</td>\n",
+       "      <td>meta-llama/llama-3.1-405b-instruct</td>\n",
+       "      <td>DeepInfra</td>\n",
+       "      <td>\\nOkay, let's see. The problem is about a jugg...</td>\n",
+       "      <td>Okay, let's see. The problem is about a juggle...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>9</td>\n",
+       "      <td>When Mei watches her brother, she gets out a v...</td>\n",
+       "      <td>59</td>\n",
+       "      <td>deepseek/deepseek-r1</td>\n",
+       "      <td>Together</td>\n",
+       "      <td>meta-llama/llama-3.1-405b-instruct</td>\n",
+       "      <td>DeepInfra</td>\n",
+       "      <td>\\nOkay, let's see. So the problem is about Mei...</td>\n",
+       "      <td>Okay, let's see. So the problem is about Mei a...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   problem_id                                            problem  answer  \\\n",
+       "0           0  Rania saw a 210-foot whale with 7 72-inch remo...      20   \n",
+       "1           1  A fog bank rolls in from the ocean to cover a ...      50   \n",
+       "2           2  Luis is rolling a 4-sided die. How much more l...      25   \n",
+       "3           3  A group of 190 students has various hobbies. 1...     150   \n",
+       "4           4  Zahra is popping popcorn for a snack. As the p...     885   \n",
+       "5           5  Sofia makes coffee using teaspoons of sugar an...    1067   \n",
+       "6           6  Pavel has 30 square yards of orange field. The...    2820   \n",
+       "7           7  A farmer is buying feed for his alpacas. He bu...       9   \n",
+       "8           8  A juggler can juggle 640 balls. An eighth of t...       8   \n",
+       "9           9  When Mei watches her brother, she gets out a v...      59   \n",
+       "\n",
+       "             stub_model stub_model_provider  \\\n",
+       "0  deepseek/deepseek-r1            Together   \n",
+       "1  deepseek/deepseek-r1            Together   \n",
+       "2  deepseek/deepseek-r1            Together   \n",
+       "3  deepseek/deepseek-r1            Together   \n",
+       "4  deepseek/deepseek-r1            Together   \n",
+       "5  deepseek/deepseek-r1            Together   \n",
+       "6  deepseek/deepseek-r1            Together   \n",
+       "7  deepseek/deepseek-r1            Together   \n",
+       "8  deepseek/deepseek-r1            Together   \n",
+       "9  deepseek/deepseek-r1            Together   \n",
+       "\n",
+       "                        perturb_model perturb_model_provider  \\\n",
+       "0  meta-llama/llama-3.1-405b-instruct              DeepInfra   \n",
+       "1  meta-llama/llama-3.1-405b-instruct              DeepInfra   \n",
+       "2  meta-llama/llama-3.1-405b-instruct              DeepInfra   \n",
+       "3  meta-llama/llama-3.1-405b-instruct              DeepInfra   \n",
+       "4  meta-llama/llama-3.1-405b-instruct              DeepInfra   \n",
+       "5  meta-llama/llama-3.1-405b-instruct              DeepInfra   \n",
+       "6  meta-llama/llama-3.1-405b-instruct              DeepInfra   \n",
+       "7  meta-llama/llama-3.1-405b-instruct              DeepInfra   \n",
+       "8  meta-llama/llama-3.1-405b-instruct              DeepInfra   \n",
+       "9  meta-llama/llama-3.1-405b-instruct              DeepInfra   \n",
+       "\n",
+       "                                                stub  \\\n",
+       "0  \\nOkay, let's see. Rania saw a 210-foot whale ...   \n",
+       "1  \\nOkay, let's see. The problem is about a fog ...   \n",
+       "2  \\nOkay, let's see. Luis is rolling a 4-sided d...   \n",
+       "3  \\nOkay, let's see. So there's this problem abo...   \n",
+       "4  \\nOkay, let's try to figure out how many popco...   \n",
+       "5  \\nOkay, let's see. Sofia uses sugar and water ...   \n",
+       "6  \\nOkay, let's see. So Pavel has this orange fi...   \n",
+       "7  \\nOkay, let's see. The farmer needs to transpo...   \n",
+       "8  \\nOkay, let's see. The problem is about a jugg...   \n",
+       "9  \\nOkay, let's see. So the problem is about Mei...   \n",
+       "\n",
+       "                                   perturbed_stub_lm  \n",
+       "0  Okay, let's see. Rania saw a 240-foot whale wi...  \n",
+       "1  Okay, let's see. The problem is about a fog ba...  \n",
+       "2  Okay, let's see. Luis is rolling a 4-sided die...  \n",
+       "3  Okay, let's see. So there's this problem about...  \n",
+       "4  Okay, let's try to figure out how many popcorn...  \n",
+       "5  Okay, let's see. Sofia uses sugar and water in...  \n",
+       "6  Okay, let's see. So Pavel has this orange fiel...  \n",
+       "7  Okay, let's see. The farmer needs to transport...  \n",
+       "8  Okay, let's see. The problem is about a juggle...  \n",
+       "9  Okay, let's see. So the problem is about Mei a...  "
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -375,18 +596,19 @@
     "# df = pd.read_csv(\"../datasets/gsm8k-experiment/gsm8k_completions_off_policy_r1.csv\")\n",
     "# pd.read_csv(\"../datasets/gsm8k-experiment/gsm8k_straight_shot_solutions_r1.csv\")\n",
     "# df = pd.read_csv(\"../datasets/gsm8k_straight_shot_solutions.csv\")\n",
-    "# df = pd.read_csv(\"../datasets/gsm8k_stubs_and_perturbations_on_policy.csv\")\n",
+    "df = pd.read_csv(\"../datasets/gsm8k_stubs_and_perturbations_on_policy.csv\")\n",
     "# df = pd.read_csv(\"../datasets/gsm8k_stubs_and_perturbations_off_policy.csv\")\n",
-    "df = pd.read_csv(\"../datasets/gsm8k_completions_off_policy.csv\")\n",
+    "# df = pd.read_csv(\"../datasets/gsm8k_completions_off_policy_r1.csv\")\n",
+    "# df = pd.read_csv(\"../datasets/gsm8k_completions_on_policy_r1.csv\")\n",
     "\n",
     "print(f\"Length of df: {len(df)}\")\n",
     "df.head(10)\n",
     "# df.iloc[1][\"perturbed_stub_lm\"]\n",
     "\n",
-    "# Calculate percentage of verified solutions\n",
+    "# # Calculate percentage of verified solutions\n",
     "# verified_percentage = (df['solution_verified'].sum() / len(df) * 100).round(2)  # FOR SS\n",
-    "# # verified_percentage = (df['perturbed_stub_lm_solution_verified'].sum() / len(df) * 100).round(2) # FOR OTHERS\n",
-    "print(f\"\\nPercentage of verified solutions: {verified_percentage}%\")\n",
+    "# verified_percentage = (df['perturbed_stub_lm_solution_verified'].sum() / len(df) * 100).round(2) # FOR OTHERS\n",
+    "# print(f\"\\nPercentage of verified solutions: {verified_percentage}%\")\n",
     "\n",
     "# print(f\"{df.iloc[0]['perturbed_stub_lm']} XXXXX {df.iloc[5]['perturbed_stub_lm_completion']}\")\n",
     "\n"
