got chart for r1

--- a/gsm8k/downloaders/scratch.ipynb
+++ b/gsm8k/downloaders/scratch.ipynb
@@ -687,6 +687,197 @@
     "df = pd.read_csv(\"../datasets/gsm8k_straight_shot_solutions.csv\")\n",
     "df.head(1)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Let's get some recovery numbers for our Table 1\n",
+    "For our R1 experiment"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Length of Straight-Shot df: 1314\n",
+      "Percentage of verified solutions: 96.35%\n",
+      "\n",
+      "Length of On-Policy df: 1319\n",
+      "Percentage of verified solutions: 89.31%\n",
+      "\n",
+      "Length of Off-Policy df: 1319\n",
+      "Percentage of verified solutions: 86.96%\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# GSM8K\n",
+    "# ~ Straight-shot\n",
+    "df = pd.read_csv(\"../datasets/gsm8k-experiment/gsm8k_straight_shot_solutions_r1.csv\")\n",
+    "print(f\"Length of Straight-Shot df: {len(df)}\")\n",
+    "verified_percentage = (df['solution_verified'].sum() / len(df) * 100).round(2)\n",
+    "print(f\"Percentage of verified solutions: {verified_percentage}%\\n\")\n",
+    "\n",
+    "\n",
+    "# ~ Off-policy\n",
+    "df = pd.read_csv(\"../datasets/gsm8k-experiment/gsm8k_completions_off_policy_r1.csv\")\n",
+    "print(f\"Length of Off-Policy df: {len(df)}\")\n",
+    "verified_percentage = (df['perturbed_stub_lm_solution_verified'].sum() / len(df) * 100).round(2)\n",
+    "print(f\"Percentage of verified solutions: {verified_percentage}%\\n\")\n",
+    "\n",
+    "\n",
+    "# ~ On-policy\n",
+    "df = pd.read_csv(\"../datasets/gsm8k-experiment/gsm8k_completions_on_policy_r1.csv\")\n",
+    "print(f\"Length of On-Policy df: {len(df)}\")\n",
+    "verified_percentage = (df['perturbed_stub_lm_solution_verified'].sum() / len(df) * 100).round(2)\n",
+    "print(f\"Percentage of verified solutions: {verified_percentage}%\\n\")\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Length of Straight-Shot df: 446\n",
+      "Percentage of verified solutions: 98.43%\n",
+      "\n",
+      "Length of Off-Policy df: 500\n",
+      "Percentage of verified solutions: 76.8%\n",
+      "\n",
+      "Length of On-Policy df: 500\n",
+      "Percentage of verified solutions: 80.0%\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# MATH-500\n",
+    "# ~ Straight-shot\n",
+    "df = pd.read_csv(\"../datasets/math-experiment/gsm8k_straight_shot_solutions_r1.csv\")\n",
+    "print(f\"Length of Straight-Shot df: {len(df)}\")\n",
+    "verified_percentage = (df['solution_verified'].sum() / len(df) * 100).round(2)\n",
+    "print(f\"Percentage of verified solutions: {verified_percentage}%\\n\")\n",
+    "\n",
+    "\n",
+    "\n",
+    "# ~ Off-policy\n",
+    "df = pd.read_csv(\"../datasets/math-experiment/gsm8k_completions_off_policy_r1.csv\")\n",
+    "print(f\"Length of Off-Policy df: {len(df)}\")\n",
+    "verified_percentage = (df['perturbed_stub_lm_solution_verified'].sum() / len(df) * 100).round(2)\n",
+    "print(f\"Percentage of verified solutions: {verified_percentage}%\\n\")\n",
+    "\n",
+    "# ~ On-policy\n",
+    "df = pd.read_csv(\"../datasets/math-experiment/gsm8k_completions_on_policy_r1.csv\")\n",
+    "print(f\"Length of On-Policy df: {len(df)}\")\n",
+    "verified_percentage = (df['perturbed_stub_lm_solution_verified'].sum() / len(df) * 100).round(2)\n",
+    "print(f\"Percentage of verified solutions: {verified_percentage}%\\n\")\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Length of Straight-Shot df: 100\n",
+      "Percentage of verified solutions: 95.0%\n",
+      "\n",
+      "Length of Off-Policy df: 100\n",
+      "Percentage of verified solutions: 88.0%\n",
+      "\n",
+      "Length of On-Policy df: 100\n",
+      "Percentage of verified solutions: 90.0%\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# GSM-Symbolic\n",
+    "# ~ Straight-shot\n",
+    "df = pd.read_csv(\"../datasets/gsm-symbolic-experiment/gsm8k_straight_shot_solutions_r1.csv\")\n",
+    "print(f\"Length of Straight-Shot df: {len(df)}\")\n",
+    "verified_percentage = (df['solution_verified'].sum() / len(df) * 100).round(2)\n",
+    "print(f\"Percentage of verified solutions: {verified_percentage}%\\n\")\n",
+    "\n",
+    "# ~ Off-policy\n",
+    "df = pd.read_csv(\"../datasets/gsm-symbolic-experiment/gsm8k_completions_off_policy_r1.csv\")\n",
+    "print(f\"Length of Off-Policy df: {len(df)}\")\n",
+    "verified_percentage = (df['perturbed_stub_lm_solution_verified'].sum() / len(df) * 100).round(2)\n",
+    "print(f\"Percentage of verified solutions: {verified_percentage}%\\n\")\n",
+    "\n",
+    "# ~ On-policy\n",
+    "df = pd.read_csv(\"../datasets/gsm-symbolic-experiment/gsm8k_completions_on_policy_r1.csv\")\n",
+    "print(f\"Length of On-Policy df: {len(df)}\")\n",
+    "verified_percentage = (df['perturbed_stub_lm_solution_verified'].sum() / len(df) * 100).round(2)\n",
+    "print(f\"Percentage of verified solutions: {verified_percentage}%\\n\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Length of Straight-Shot df: 99\n",
+      "Percentage of verified solutions: 91.92%\n",
+      "\n",
+      "Length of Off-Policy df: 100\n",
+      "Percentage of verified solutions: 90.0%\n",
+      "\n",
+      "Length of On-Policy df: 100\n",
+      "Percentage of verified solutions: 90.0%\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# GSM-Symbolic-Matched\n",
+    "# ~ Straight-shot\n",
+    "df = pd.read_csv(\"../datasets/gsm-symbolic-matched-from-gsm8k-experiment/gsm8k_straight_shot_solutions_r1.csv\")\n",
+    "print(f\"Length of Straight-Shot df: {len(df)}\")\n",
+    "verified_percentage = (df['solution_verified'].sum() / len(df) * 100).round(2)\n",
+    "print(f\"Percentage of verified solutions: {verified_percentage}%\\n\")\n",
+    "\n",
+    "# ~ Off-policy\n",
+    "df = pd.read_csv(\"../datasets/gsm-symbolic-matched-from-gsm8k-experiment/gsm8k_completions_off_policy_r1.csv\")\n",
+    "print(f\"Length of Off-Policy df: {len(df)}\")\n",
+    "verified_percentage = (df['perturbed_stub_lm_solution_verified'].sum() / len(df) * 100).round(2)\n",
+    "print(f\"Percentage of verified solutions: {verified_percentage}%\\n\")\n",
+    "\n",
+    "# ~ On-policy\n",
+    "df = pd.read_csv(\"../datasets/gsm-symbolic-matched-from-gsm8k-experiment/gsm8k_completions_on_policy_r1.csv\")\n",
+    "print(f\"Length of On-Policy df: {len(df)}\")\n",
+    "verified_percentage = (df['perturbed_stub_lm_solution_verified'].sum() / len(df) * 100).round(2)\n",
+    "print(f\"Percentage of verified solutions: {verified_percentage}%\\n\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
